--- a/Unity/Assets/Scripts/FindTargetTests/FindTargetTests.asmdef
+++ b/Unity/Assets/Scripts/FindTargetTests/FindTargetTests.asmdef
@@ -1,21 +1,28 @@
 {
-    "name": "FindTarget",
+    "name": "FindTargetTests",
     "references": [
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8a2eafa29b15f444eb6d74f94a930e1d",
         "GUID:807be9350277eff4182cd3600de41d3a",
         "GUID:7a450cf7ca9694b5a8bfa3fd83ec635a",
         "GUID:a5baed0c9693541a5bd947d336ec7659",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:1a9fe49d125a08c4694b90d7a4afeffe"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
     "autoReferenced": false,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
